--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,31 +11,33 @@
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <a class="navbar-brand" href="/">YelpCamp</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container">
+            <a class="navbar-brand" href="/">YelpCamp</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item <%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>"><a class="nav-link" href="/campgrounds">Home</a></li>
-                <li class="nav-item">
-                    <form class="form-inline" action="/campgrounds" method="GET">
-                        <input class="form-control ml-sm-4 mr-sm-2" type="text" name="search" placeholder="Search for a campground" aria-label="Search for a campground">
-                        <button class="btn btn-dark btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                </li>
-            </ul>
-            <ul class="navbar-nav">
-                <% if(!currentUser){ %>
-                    <li class="nav-item <%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a class="nav-link" href="/login">Login</a></li>
-                    <li class="nav-item <%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a class="nav-link" href="/register">Sign Up</a></li>
-                    <% } else { %>
-                        <li class="nav-item"><a class="nav-link" href="/users/<%= currentUser.username %>">Signed in as <%= currentUser.username %></a></li>
-                        <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-                        <% } %>
-            </ul>
-        </div>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item <%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>"><a class="nav-link" href="/campgrounds">Home</a></li>
+                    <li class="nav-item">
+                        <form class="form-inline" action="/campgrounds" method="GET">
+                            <input class="form-control ml-sm-4 mr-sm-2" type="text" name="search" placeholder="Search for a campground" aria-label="Search for a campground">
+                            <button class="btn btn-dark btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+                        </form>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <% if(!currentUser){ %>
+                        <li class="nav-item <%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a class="nav-link" href="/login">Login</a></li>
+                        <li class="nav-item <%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a class="nav-link" href="/register">Sign Up</a></li>
+                        <% } else { %>
+                            <li class="nav-item"><a class="nav-link" href="/users/<%= currentUser.username %>">Signed in as <%= currentUser.username %></a></li>
+                            <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+                            <% } %>
+                </ul>
+            </div>
     </nav>
     <div class="container">
         <% if(error && error.length > 0) { %>
@@ -47,5 +49,6 @@
                     <%=success%>
                 </div>
                 <% } %>
+    </div>
     </div>
     <div class="container">
