--- a/views/reviews/index.ejs
+++ b/views/reviews/index.ejs
@@ -24,7 +24,7 @@
                         Current campground rating: <strong><%= campground.rating.toFixed(2) %></strong>
                     </p>
                     <p><h4>All reviews for this campground:</h4></p>
-                    <hr style="margin-top: 0;">
+                    <hr class="mt-0">
                     <% campground.reviews.forEach(function(review){ %>
                     <div class="row">
                         <div class="col-md-3">
@@ -33,15 +33,16 @@
                             <span><em><%= review.updatedAt.toDateString() %></em></span>
                         </div>
                         <div class="col-md-9">
-                            <p style="text-align: justify; word-wrap: break-word;">
+                            <p>
                                 <%= review.text %>
                             </p>
-                            <% if(currentUser && review.author.id.equals(currentUser._id)){ %>
-                            <a class="btn btn-xs btn-warning"
-                               href="/campgrounds/<%=campground._id %>/reviews/<%=review._id %>/edit">Edit</a>
-                            <form id="delete-form" action="/campgrounds/<%=campground._id %>/reviews/<%=review._id %>?_method=DELETE" method="POST">
-                                <input type="submit" class="btn btn-xs btn-danger" value="Delete">
-                            </form>
+                            <% if(currentUser && review.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin){ %>
+                                <div class="float-right">
+                                    <a href="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>/edit" class="btn btn-sm btn-warning">Edit</a>
+                                    <form class="delete-form" action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
+                                        <button class="btn btn-sm btn-danger">Delete</button>
+                                    </form>
+                                </div>
                             <% } %>
                         </div>
                     </div>
