--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -48,6 +48,7 @@
                 <div class="form-group">
                     <button class="btn btn-primary btn-block">Submit a Review</button>
                 </div>
+                <input type="hidden" name="referrer" value=<%=referrer%>>
             </form>
             <a href="/campgrounds">Go Back</a>
         </div>
