--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
 
     <header class="jumbotron">
-        <div class="container">
+        <div class="container text-center">
             <h1><i class="fas fa-campground"></i> Welcome to YelpCamp!</h1>
             <p>View our hand-picked campgrounds from all over the world</p>
             <p><a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Campground</a></p>
