--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,7 @@
     background-color: lightgray;
     color: white;
     background-size: cover;
+    text-shadow: 2px 3px 3px rgba(0, 0, 0, 1);
 }
 
 .caption {
