--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,7 +26,11 @@
             </div>
             <div class="form-group register">
                 <label for="password">Password</label>
-                <input class="form-control" type="password" name="password" placeholder="password" required>
+                <input class="form-control" type="password" name="password" id="password" placeholder="password" required>
+            </div>
+            <div class="form-group register">
+                <label for="password">Confirm Password</label>
+                <input class="form-control" type="password" name="confirmation" id="confirmation" placeholder="password (again)" oninput="check(this)" required>
             </div>
             <div class="form-group register-end">
                 <label for="admin">Admin Code (Optional)</label>
@@ -39,5 +43,19 @@
         <a href="/campgrounds">Go Back</a>
     </div>
 </div>
+
+<!--Verify passwords match-->
+<script language="javascript" type="text/javascript">
+    function check(input) {
+        if (document.getElementById("confirmation").value !=
+            document.getElementById("password").value) {
+            input.setCustomValidity("Passwords must match.");
+        }
+        else {
+            // input is valid -- reset the error message
+            input.setCustomValidity("");
+        }
+    }
+</script>
 
 <% include partials/footer %>
