--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -24,7 +24,7 @@
                 </div>
                 <div class="form-group">
                     <label for="description">Description</label>
-                    <input class="form-control" type="text" name="campground[description]" id="description" placeholder="California’s Sierra Nevada mountains." required>
+                    <textarea class="form-control" rows="7" name="campground[description]" id="description" placeholder="California’s Sierra Nevada mountains." maxlength="1500" required></textarea>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-primary btn-block">Submit!</button>
