--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -51,7 +51,7 @@
                 <h4>Latest reviews for this campground:</h4>
               </p>
               <hr class="mt-0 mb-0">
-              <div class="well mt-4 pt-2">
+              <div class="well mt-3 pt-3 pl-3 pr-3">
               <% campground.reviews.slice(0, 5).forEach(function(review){ %>
                 <div class="row">
                   <div class="col-md-3">
