Added automatic redirection after logging in + tidied up whitespace

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -35,8 +35,8 @@
     </div>
     <script>
         function activatePlacesSearch() {
-            var input = document.getElementById("location");
-            var autocomplete = new google.maps.places.Autocomplete(input);
+            let input = document.getElementById("location");
+            let autocomplete = new google.maps.places.Autocomplete(input);
         }
     </script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANsplbu_wQ2HF2Fp29fD_X0LA_xczXkgc&libraries=places&callback=activatePlacesSearch"></script>
