--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -93,23 +93,23 @@
 
   <script>
     function initMap() {
-      var lat = <%= campground.lat %>;
-      var lng = <%= campground.lng %>;
-      var center = { lat: lat, lng: lng };
-      var map = new google.maps.Map(document.getElementById('map'), {
+      let lat = <%= campground.lat %>;
+      let lng = <%= campground.lng %>;
+      let center = { lat: lat, lng: lng };
+      let map = new google.maps.Map(document.getElementById('map'), {
         zoom: 8,
         center: center,
         scrollwheel: false
       });
-      var contentString = `
+      let contentString = `
       <strong><%= campground.name %><br />
       <%= campground.location %></strong>
       <p><%= campground.description %></p>
     `
-      var infowindow = new google.maps.InfoWindow({
+      let infowindow = new google.maps.InfoWindow({
         content: contentString
       });
-      var marker = new google.maps.Marker({
+      let marker = new google.maps.Marker({
         position: center,
         map: map
       });
