--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -50,7 +50,7 @@
         <li><a class="page-link" href="/campgrounds?page=<%= Number(current) - 1 %><%if(search){%>&search=<%=search%><%}%>">«</a></li>
         <% } %>
 
-        <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
+        <% let i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
         <% if (i !== 1) { %>
         <li class="page-item disabled"><a class="page-link">...</a></li>
         <% } %>
